--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmp4I7qkGzxQY/qfFTL5+b",
+      "authorship_tag": "ABX9TyOPoQ4njgwyfqX8++YVNMeV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -93,7 +93,7 @@
         "id": "ZhYPcwtSZAxR",
         "outputId": "c7ff2a01-1f8e-4078-fcd3-cad00314b172"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "5ykZHb8NZp26"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -130,7 +130,7 @@
       "metadata": {
         "id": "f5XblhAfZ2FR"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
       "metadata": {
         "id": "mxKp92ejaKNh"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
       "metadata": {
         "id": "nSJAK46oaMNZ"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "9K8Yz91JadKZ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,7 +178,7 @@
       "metadata": {
         "id": "EfIw957bajTZ"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,17 +189,67 @@
       "metadata": {
         "id": "WTE5obOuancZ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "IPython Magic Commands\n"
+      ],
       "metadata": {
-        "id": "GiW4doQXaqjx"
+        "id": "2VDucxIXc9TX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Sirve para evaluar el desempeño de una expresión en cuanto a tiempo\n",
+        "%timeit L = [n ** 2 for n in range(1000)]"
+      ],
+      "metadata": {
+        "id": "umoxJm6JdDVX",
+        "outputId": "86aa6158-d801-43f0-8e9e-9679f905f09e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "76.6 µs ± 15.5 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%timeit\n",
+        "L = []\n",
+        "for n in range(1000):\n",
+        "  L.append(n ** 2)"
+      ],
+      "metadata": {
+        "id": "TYEqlbc5dfBx",
+        "outputId": "e6fb8ee9-fd39-4026-e7aa-6a26d3013d99",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "82.3 µs ± 12.1 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+          ]
+        }
+      ]
     }
   ]
 }
