--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOPoQ4njgwyfqX8++YVNMeV",
+      "authorship_tag": "ABX9TyP2XCtj/4s1V5Tuc4RdG/Lx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -208,11 +208,11 @@
         "%timeit L = [n ** 2 for n in range(1000)]"
       ],
       "metadata": {
-        "id": "umoxJm6JdDVX",
-        "outputId": "86aa6158-d801-43f0-8e9e-9679f905f09e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "umoxJm6JdDVX",
+        "outputId": "86aa6158-d801-43f0-8e9e-9679f905f09e"
       },
       "execution_count": 2,
       "outputs": [
@@ -228,17 +228,18 @@
     {
       "cell_type": "code",
       "source": [
+        "#Con doble porcenaje podemos evaluar el desempeño en cunato tiempo de más de una lómea de código\n",
         "%%timeit\n",
         "L = []\n",
         "for n in range(1000):\n",
         "  L.append(n ** 2)"
       ],
       "metadata": {
-        "id": "TYEqlbc5dfBx",
-        "outputId": "e6fb8ee9-fd39-4026-e7aa-6a26d3013d99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "TYEqlbc5dfBx",
+        "outputId": "e6fb8ee9-fd39-4026-e7aa-6a26d3013d99"
       },
       "execution_count": 4,
       "outputs": [
@@ -250,6 +251,329 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "IPython and Shell Commands"
+      ],
+      "metadata": {
+        "id": "QRMETIQ6eruv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo \"hello world\""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QY5v_vFqevHX",
+        "outputId": "9b0281d2-9561-4579-d9df-4f784f439c1a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pwd"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odZrd9JCfxbe",
+        "outputId": "7790111c-d9f5-4e4e-ed52-835e22083b48"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "metadata": {
+        "id": "4MnZy3cDf1hV",
+        "outputId": "99020e0d-2fa8-420a-df20-05b09d3ead48",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sample_data\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "message = \"hello from Python\""
+      ],
+      "metadata": {
+        "id": "zKEmVHWEf9IO"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo {message}"
+      ],
+      "metadata": {
+        "id": "kVvZ5zOMgG_e",
+        "outputId": "77423f18-21dc-4f09-c5a0-0fce5d15af26",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello from Python\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%cd /content/"
+      ],
+      "metadata": {
+        "id": "rggFG6fqgItn",
+        "outputId": "532ea6cc-88da-4957-b921-ef80a3d9a6e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%ls"
+      ],
+      "metadata": {
+        "id": "VLDjYTaFgfy_",
+        "outputId": "41e1b355-b686-4135-c4bb-c20e6a2d09f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;34msample_data\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Understanding Data types in Python"
+      ],
+      "metadata": {
+        "id": "Y4hosGNhjKyu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Importa numpy y renombralo como np\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "VsmFWob8jWxx"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#arreglo lineal de enteros\n",
+        "np.array([1, 4, 2, 5, 3])"
+      ],
+      "metadata": {
+        "id": "EUc7jAiQjkH2",
+        "outputId": "4aed7723-8348-4b56-ab17-865bb0b5c7ea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 4, 2, 5, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Al ingresar enteros y flotantes los convierte en flotantes\n",
+        "np.array([3.14, 4, 2, 3])"
+      ],
+      "metadata": {
+        "id": "OFr9D_U_jmnf",
+        "outputId": "b835580e-7fa7-4cfa-a84a-8c0ed1999342",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3.14, 4.  , 2.  , 3.  ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([1, 2, 3, 4], dtype='float32')"
+      ],
+      "metadata": {
+        "id": "tDIccuAKjvTn",
+        "outputId": "203057f4-2a32-44dc-d24e-0739a648e027",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1., 2., 3., 4.], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.array([1, 2, 3, 4], dtype='int')"
+      ],
+      "metadata": {
+        "id": "SYijfIUakDEv",
+        "outputId": "b956b32d-a353-409a-d9c2-52845082b22e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3, 4])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Cuando el argumento de np.array es una iteración anidad genera una matriz\n",
+        "np.array([range(i, i + 3) for i in [2, 4, 6]])"
+      ],
+      "metadata": {
+        "id": "5mD2itTJkMl3",
+        "outputId": "d42e3eb9-ebc0-42c8-b925-ff2433e001b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 3, 4],\n",
+              "       [4, 5, 6],\n",
+              "       [6, 7, 8]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "tgXHFRkTkQ0n"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
