--- a/MineriaDeDatos.ipynb
+++ b/MineriaDeDatos.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMTGFJmuhxT7a2gEidLGAW2",
+      "authorship_tag": "ABX9TyPNYNiBxDQ/6y/rvQi8DPn5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1489,71 +1489,72 @@
         "import pandas as pd\n",
         "from io import StringIO\n",
         "\n",
-        "raw = \"\"\"Marca temporal\\tNúmero de matrícula\\t¿Cuántos años cumplidos tienes?\\t¿Has realizado programas utilizando Python?\\t¿Has utilizado Google Colab?\\t¿Tienes cuenta de GitHub?\n",
-        "19/01/2026 18:32:18\\t178920\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:23\\t182712\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:25\\t180370\\t26\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:27\\t182570\\t21\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:28\\t177622\\t24\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:29\\t175166\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:30\\t177573\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:35\\t178430\\t21\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:38\\t179169\\t23\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:41\\t177263\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:32:48\\t179884\\t23\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:48\\t183016\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:50\\t179033\\t23\\tSi\\tSi\\tNo\n",
-        "19/01/2026 18:32:54\\t178218\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:32:55\\t178446\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:33:00\\t178166\\t22\\tSi\\tSi\\tNo\n",
-        "19/01/2026 18:33:02\\t177406\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:33:05\\t177192\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:33:08\\t182451\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:33:08\\t171513\\t24\\tNo\\tNo\\tSi\n",
-        "19/01/2026 18:33:09\\t181619\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:33:12\\t182298\\t23\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:33:14\\t181419\\t24\\tNo\\tNo\\tSi\n",
-        "19/01/2026 18:33:32\\t177291\\t21\\tSi\\tSi\\tSi\n",
-        "19/01/2026 18:33:42\\t182085\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:33:53\\t176453\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:34:04\\t176263\\t24\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:34:06\\t179997\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 18:36:21\\t175842\\t23\\tSi\\tNo\\tNo\n",
-        "19/01/2026 20:19:21\\t179913\\t20\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:19:48\\t177301\\t22\\tSi\\tSi\\tNo\n",
-        "19/01/2026 20:20:06\\t183060\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:20:08\\t177935\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:19\\t177700\\t20\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:26\\t178318\\t24\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:27\\t174653\\t24\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:20:29\\t177139\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:20:31\\t173479\\t25\\tSi\\tNo\\tNo\n",
-        "19/01/2026 20:20:39\\t175588\\t23\\tNo\\tNo\\tSi\n",
-        "19/01/2026 20:20:45\\t178774\\t23\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:45\\t175031\\t23\\tSi\\tNo\\tNo\n",
-        "19/01/2026 20:20:49\\t178396\\t21\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:49\\t172068\\t23\\tNo\\tNo\\tNo\n",
-        "19/01/2026 20:20:50\\t174197\\t23\\tNo\\tNo\\tSi\n",
-        "19/01/2026 20:20:55\\t178584\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:20:55\\t175329\\t24\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:20:56\\t177685\\t22\\tSi\\tSi\\tSi\n",
-        "19/01/2026 20:20:57\\t178678\\t22\\tNo\\tNo\\tSi\n",
-        "19/01/2026 20:21:04\\t177143\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:21:07\\t182318\\t26\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:21:27\\t182377\\t20\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:21:34\\t179419\\t22\\tSi\\tNo\\tNo\n",
-        "19/01/2026 20:21:35\\t181662\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:21:38\\t181760\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:22:06\\t177888\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:22:15\\t176535\\t25\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:22:29\\t179862\\t21\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:22:32\\t178378\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:22:50\\t177451\\t22\\tSi\\tNo\\tSi\n",
-        "19/01/2026 20:23:15\\t179804\\t21\\tSi\\tNo\\tSi\n",
-        "\"\"\"\n",
+        "# raw = \"\"\"Marca temporal\\tNúmero de matrícula\\t¿Cuántos años cumplidos tienes?\\t¿Has realizado programas utilizando Python?\\t¿Has utilizado Google Colab?\\t¿Tienes cuenta de GitHub?\n",
+        "# 19/01/2026 18:32:18\\t178920\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:23\\t182712\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:25\\t180370\\t26\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:27\\t182570\\t21\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:28\\t177622\\t24\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:29\\t175166\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:30\\t177573\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:35\\t178430\\t21\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:38\\t179169\\t23\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:41\\t177263\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:32:48\\t179884\\t23\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:48\\t183016\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:50\\t179033\\t23\\tSi\\tSi\\tNo\n",
+        "# 19/01/2026 18:32:54\\t178218\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:32:55\\t178446\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:33:00\\t178166\\t22\\tSi\\tSi\\tNo\n",
+        "# 19/01/2026 18:33:02\\t177406\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:05\\t177192\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:33:08\\t182451\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:08\\t171513\\t24\\tNo\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:09\\t181619\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:12\\t182298\\t23\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:14\\t181419\\t24\\tNo\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:32\\t177291\\t21\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 18:33:42\\t182085\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:33:53\\t176453\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:34:04\\t176263\\t24\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:34:06\\t179997\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 18:36:21\\t175842\\t23\\tSi\\tNo\\tNo\n",
+        "# 19/01/2026 20:19:21\\t179913\\t20\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:19:48\\t177301\\t22\\tSi\\tSi\\tNo\n",
+        "# 19/01/2026 20:20:06\\t183060\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:08\\t177935\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:19\\t177700\\t20\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:26\\t178318\\t24\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:27\\t174653\\t24\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:29\\t177139\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:31\\t173479\\t25\\tSi\\tNo\\tNo\n",
+        "# 19/01/2026 20:20:39\\t175588\\t23\\tNo\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:45\\t178774\\t23\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:45\\t175031\\t23\\tSi\\tNo\\tNo\n",
+        "# 19/01/2026 20:20:49\\t178396\\t21\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:49\\t172068\\t23\\tNo\\tNo\\tNo\n",
+        "# 19/01/2026 20:20:50\\t174197\\t23\\tNo\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:55\\t178584\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:55\\t175329\\t24\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:20:56\\t177685\\t22\\tSi\\tSi\\tSi\n",
+        "# 19/01/2026 20:20:57\\t178678\\t22\\tNo\\tNo\\tSi\n",
+        "# 19/01/2026 20:21:04\\t177143\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:21:07\\t182318\\t26\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:21:27\\t182377\\t20\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:21:34\\t179419\\t22\\tSi\\tNo\\tNo\n",
+        "# 19/01/2026 20:21:35\\t181662\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:21:38\\t181760\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:22:06\\t177888\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:22:15\\t176535\\t25\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:22:29\\t179862\\t21\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:22:32\\t178378\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:22:50\\t177451\\t22\\tSi\\tNo\\tSi\n",
+        "# 19/01/2026 20:23:15\\t179804\\t21\\tSi\\tNo\\tSi\n",
+        "# \"\"\"\n",
         "\n",
         "# Cargar datos\n",
-        "df = pd.read_csv(StringIO(raw), sep='\\t')\n",
+        "#df = pd.read_csv(StringIO(raw), sep='\\t')\n",
+        "df = pd.read_csv('Raw.csv')\n",
         "df.columns = [c.strip() for c in df.columns]\n",
         "\n",
         "# Variables\n",
@@ -1566,7 +1567,7 @@
       "metadata": {
         "id": "fk_RbNz4YLlA"
       },
-      "execution_count": 1,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1577,7 +1578,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 328
+          "height": 382
         },
         "id": "K-Ir5rU5YjWA",
         "outputId": "77c06c3b-e303-49bd-d322-5635d2a3bec7"
@@ -2012,11 +2013,11 @@
         "means_by_group"
       ],
       "metadata": {
-        "id": "NJ3XnhOSfOqQ",
-        "outputId": "fa48318d-8da8-40a7-c895-c876a2af1dc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NJ3XnhOSfOqQ",
+        "outputId": "fa48318d-8da8-40a7-c895-c876a2af1dc5"
       },
       "execution_count": 17,
       "outputs": [
